fix sidebar dan recent thread

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,12 +4,12 @@
   <h4 class="sidebar-title">THREAD</h4>
   <ul>
     <li class="sidebar-item active">
-      <a href="{% url 'recent_thread' %}">
+      <a href="{% url 'recent_threads' %}">
         <i class="fas fa-clock"></i><span>Recent</span>
       </a>
     </li>
     <li class="sidebar-item">
-      <a href="{% url 'hot_thread' %}">
+      <a href="{% url 'hot_threads' %}">
         <i class="fas fa-fire"></i><span>Hot Thread</span>
       </a>
     </li>
@@ -21,7 +21,7 @@
   <h4 class="sidebar-title">MENU</h4>
   <ul>
     <li class="sidebar-item">
-      <a href="{% url 'bookmark' %}">
+      <a href="{% url 'bookmarked_threads' %}">
         <i class="fas fa-bookmark"></i><span>Bookmark</span>
       </a>
     </li>
