--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 <!-- Sidebar Thread Section -->
 <div class="sidebar-section">
   <h4 class="sidebar-title">THREAD</h4>
@@ -26,7 +25,7 @@
       </a>
     </li>
     <li class="sidebar-item">
-      <a href="{% url 'profile' user.username %}">
+      <a href="{% url 'profil:show_views' %}">
         <i class="fas fa-user"></i><span>Profile</span>
       </a>
     </li>
