--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -49,6 +49,9 @@
   </ul>
 </div>
 
+<div class="sidebar-footer">
+    <p>© 2025 SMASH, PBP Kelompok A05.<br>All rights reserved</p>
+</div>
 
 <style>
 /* ===== Sidebar Struktur ===== */
