perubahan template profil_user

--- a/profil/templates/profile_user.html
+++ b/profil/templates/profile_user.html
@@ -90,7 +90,7 @@
     <div class="max-w-4xl mx-auto bg-gray-100 rounded-xl p-8 mt-6 shadow-lg">
       <div class="bg-white rounded-xl p-6 shadow mb-6">
         <div class="flex items-center space-x-6">
-          <img src="{% static 'img/default-avatar.png' %}" alt="Profil" class="rounded-full w-20 h-20" />
+          <img src="{% static 'images/user-profile.png' %}" alt="Profil" class="rounded-full w-20 h-20" />
           <div>
             <h2 class="text-lg">Hello,</h2>
             <h1 id="profile-name" class="text-4xl font-extrabold">{{ user.username }}</h1>
