menambahkan tentang smash untuk sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -37,7 +37,7 @@
   <h4 class="sidebar-title">OTHERS</h4>
   <ul>
     <li class="sidebar-item">
-      <a href="{% url 'about' %}">
+      <a href="{% url 'main:about_smash' %}" class="flex items-center space-x-2 hover:text-green-700">
         <i class="fas fa-info-circle"></i><span>Tentang SMASH</span>
       </a>
     </li>
